<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/medirFragment">

    <fragment
        android:id="@+id/medirFragment"
        android:name="com.alejandromartin.dbmap.MedirFragment"
        android:label="@string/titulo_medicion"
        tools:layout="@layout/fragment_medir">

        <action
            android:id="@+id/action_medirFragment_to_mapaFragment"
            app:destination="@id/mapaFragment" />

        <action
            android:id="@+id/action_medirFragment_to_historicoFragment"
            app:destination="@id/historicoFragment" />

        <action
            android:id="@+id/action_medirFragment_to_ajustesFragment"
            app:destination="@id/ajustesFragment" />

    </fragment>

    <fragment
        android:id="@+id/mapaFragment"
        android:name="com.alejandromartin.dbmap.MapaFragment"
        android:label="@string/titulo_mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/historicoFragment"
        android:name="com.alejandromartin.dbmap.HistoricoFragment"
        android:label="@string/titulo_historico"
        tools:layout="@layout/fragment_historico" />

    <fragment
        android:id="@+id/ajustesFragment"
        android:name="com.alejandromartin.dbmap.AjustesFragment"
        android:label="@string/titulo_ajustes"
        tools:layout="@layout/fragment_ajustes" />

</navigation>