<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textTituloAjustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_ajustes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textDescripcionAjustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ajustes_descripcion"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textTituloAjustes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchCentrarMapa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ajustes_centrar_mapa"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/textDescripcionAjustes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchAvisoPrivacidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ajustes_aviso_privacidad"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/switchCentrarMapa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>